load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files(
    [
        ".jest-bazel.config.js",
        "babel.config.js",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

_LINT_WARNINGS = [
    "+out-of-order-load",
    "+unsorted-dict-items",
]

# bazel run --build_tag_filters=manual //:buildifier.lint
buildifier(
    name = "buildifier.lint",
    lint_mode = "warn",
    lint_warnings = _LINT_WARNINGS,
    mode = "diff",
    tags = ["manual"],
    verbose = True,
)

# bazel run --build_tag_filters=manual //:buildifier.fix
buildifier(
    name = "buildifier.fix",
    lint_mode = "fix",
    lint_warnings = _LINT_WARNINGS,
    mode = "fix",
    tags = ["manual"],
    verbose = True,
)
