# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2021"
publish = false
resolver = "2"

[profile.dev]
# Currently on stable-x86_64-apple-darwin: 81,1 MB
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
# Currently on stable-x86_64-apple-darwin: 17,8 MB
opt-level = 3
lto = "thin"

[dependencies]
anyhow = { version = "1.0.52", default-features = false, features = ["std"] }
async-trait = "0.1.52"
base64 = "0.13.0"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm", branch = "master" }
bytes = "1.1.0"
casbin = "2.0.9"
clap = { version = "3.0.4", default-features = false, features = ["std", "cargo", "color", "suggestions", "unicode"] }
clap_generate = { version = "3.0.1", default-features = false }
data-encoding = "2.3.2"
deadpool = { version = "0.9.2", default-features = false, features = ["managed"] }
dotenv = { version = "0.15.0", default-features = false }
futures = "0.3.19"
http = "0.2.6"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
jsonwebtoken = "7.2.0"
juniper = { version = "0.15.7", default-features = false, features = ["schema-language"] }
lazy_static = "1.4.0"
lettre = "0.10.0-rc.4"
num_cpus = "1.13.1"
rand = "0.8.4"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "gzip", "default-tls"] }
ring = "0.16.20"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_ses = "0.47.0"
serde = "1.0.133"
serde_json = "1.0.74"
serde_qs = "0.8.5"
thiserror = { version = "1.0.30", default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter"] }
typed-builder = "0.9.1"
url = "2.2.2"
uuid = { version = "0.8.2", default-features = false, features = ["std", "v4"] }
warp = { version = "0.3.2", default-features = false, features = ["multipart", "compression"] }

[dev-dependencies]
insta = { version = "1.10.0", default-features = false, features = ["colors", "ron", "redactions"] }
proptest = "1.0.0"
signedsource = { version = "0.3.0", default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["full"] }
valico = "3.6.0"
