# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "server",
  "signedsource",
]

[profile.dev]
# Currently on stable-x86_64-apple-darwin: 81,1 MB
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
# Currently on stable-x86_64-apple-darwin: 17,8 MB
opt-level = 3
lto = "thin"
