load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "eslint_plugin_adeira",
    package_name = "@adeira/eslint-plugin-adeira",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//@babel/eslint-parser",
        "@npm//eslint",
        "@npm//fast-levenshtein",
    ],
)
