load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "graphql_bc_checker",
    package_name = "@adeira/graphql-bc-checker",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//graphql",
        "@universe//src/fixtures-tester",
        "@universe//src/js",
        "@universe//src/signed-source",
    ],
)
