load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "graphql-global-id",
    package_name = "@adeira/graphql-global-id",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//graphql",
        "@universe//src/js",
    ],
)
