load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "graphql-relay-fauna",
    package_name = "@adeira/graphql-relay-fauna",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//faunadb",
        "@npm//graphql",
        "@universe//src/graphql-global-id",
        "@universe//src/js",
    ],
)
