load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "monorepo-shipit",
    package_name = "@adeira/monorepo-shipit",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//fast-levenshtein",
        "@universe//src/js",
        "@universe//src/logger",
        "@universe//src/monorepo-utils",
        "@universe//src/test-utils",
    ],
)
