load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "monorepo-utils",
    package_name = "@adeira/monorepo-utils",
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@universe//src/js",
    ],
)

# TODO: build `bin` first
# nodejs_binary(
#     name = "monorepo_babel_node",
#     data = [":monorepo_utils"],
#     entry_point = ":bin/monorepo-babel-node.js",
# )
