[package]
name = "rossum-dmv2-analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71" }
clap = { version = "4.3.12", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "suggestions", "unicode", "usage"] }
colored = { version = "2.0.4" }
indicatif = { version = "0.17.5" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.102" }
tokio = { version = "1.29.1", features = ["full"] }
