[package]
name = "rossum-dmv2-analyze"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72" }
clap = { version = "4.3.17", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "suggestions", "unicode", "usage"] }
colored = { version = "2.0.4" }
csv = { version = "1.2.2" }
indicatif = { version = "0.17.5" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = { version = "1.0.103" }
tempfile = { version = "3.6.0" }
tokio = { version = "1.29.1", features = ["full"] }
