load("//:bazel/macros/build_yarn_workspace.bzl", "build_yarn_workspace")
load("//:bazel/macros/test_yarn_workspace.bzl", "test_yarn_workspace")

build_yarn_workspace(
    name = "test-utils",
    package_name = "@adeira/test-utils",
    deps = [
        "@npm//graphql",
    ],
)

test_yarn_workspace(
    name = "test",
    deps = [
        "@npm//graphql",
    ],
)
