[package]
name = "x"
description = "Adeira Universe executor"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", default-features = false }
clap = { version = "3.1.13", default-features = false, features = ["std", "cargo", "color", "suggestions", "unicode"] }
env_logger = { version = "0.9.0", default-features = false }
log = { version = "0.4.16", default-features = false }
