[package]
name = "x"
description = "Adeira Universe executor"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false }
clap = { version = "4.3.3", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "string", "suggestions", "unicode", "usage"] }
env_logger = { version = "0.10.0", default-features = false }
log = { version = "0.4.18", default-features = false }
