# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
async-trait = "0.1.74"
base64 = "0.21.5"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm", branch = "master" }
bytes = "1.5.0"
casbin = "2.0.9"
clap = { version = "4.4.8", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "suggestions", "unicode", "usage"] }
clap_complete = { version = "4.4.4", default-features = false }
data-encoding = "2.4.0"
deadpool = { version = "0.9.5", default-features = false, features = ["managed"] }
dotenv = { version = "0.15.0", default-features = false }
futures = "0.3.29"
hex = "0.4.3"
http = "0.2.10"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
jsonwebtoken = "9.1.0"
juniper = { version = "0.15.11", default-features = false, features = ["schema-language"] }
lazy_static = "1.4.0"
md-5 = "0.10.6"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "gzip", "default-tls"] }
ring = "0.17.5"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
sentry = "0.31.8"
sentry-tracing = "0.31.8"
serde = "1.0.192"
serde_json = "1.0.108"
serde_qs = "0.12.0"
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter"] }
typed-builder = "0.18.0"
url = "2.4.1"
uuid = { version = "1.5.0", default-features = false, features = ["std", "v4"] }
warp = { version = "0.3.3", default-features = false, features = ["multipart", "compression"] }

[dev-dependencies]
insta = { version = "1.34.0", default-features = false, features = ["colors", "ron", "redactions", "json"] }
proptest = "1.4.0"
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
valico = "4.0.0"
