# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
async-trait = "0.1.77"
axum = "0.7.4"
base64 = "0.22.0"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm", branch = "master" }
bytes = "1.5.0"
casbin = "2.2.0"
clap = { version = "4.5.2", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "suggestions", "unicode", "usage"] }
clap_complete = { version = "4.5.1", default-features = false }
data-encoding = "2.5.0"
deadpool = { version = "0.10.0", default-features = false, features = ["managed"] }
dotenv = { version = "0.15.0", default-features = false }
futures = "0.3.30"
hex = "0.4.3"
http = "0.2.12"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png"] }
jsonwebtoken = "9.2.0"
juniper = { version = "0.15.12", default-features = false, features = ["schema-language"] }
lazy_static = "1.4.0"
md-5 = "0.10.6"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "gzip", "default-tls"] }
ring = "0.17.8"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
sentry = "0.32.2"
sentry-tracing = "0.32.2"
serde = "1.0.197"
serde_json = "1.0.114"
serde_qs = "0.12.0"
thiserror = { version = "1.0.57", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter"] }
typed-builder = "0.18.1"
url = "2.5.0"
uuid = { version = "1.7.0", default-features = false, features = ["std", "v4"] }
warp = { version = "0.3.3", default-features = false, features = ["multipart", "compression"] }

[dev-dependencies]
insta = { version = "1.36.1", default-features = false, features = ["colors", "ron", "redactions", "json"] }
proptest = "1.4.0"
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
valico = "4.0.0"
