[package]
name = "arangodb"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.4.5"
async-trait = "0.1.42"
deadpool = { version = "0.6.0", features = ["managed"] }
log = "0.4.11"
num_cpus = "1.13.0"
