[package]
name = "auth"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
arangodb = { path = "../arangodb" }
arangors = "0.4.5"
async-trait = "0.1.42"
insta = "1.3.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
reqwest = { version = "0.10.10", features = ["json", "blocking"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
