[package]
name = "sdui"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangodb = { path = "../arangodb" }
arangors = "0.4.5"
juniper = { git = "https://github.com/graphql-rust/juniper" }
log = "0.4.0"
serde = "1.0.118"

[dev-dependencies]
insta = "1.3.0"
