[package]
name = "sdui"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangodb = { path = "../arangodb" }
arangors = "0.4.5"
async-trait = "0.1.42"
auth = { path = "../auth" }
dataloader = "0.13.2"
juniper = { git = "https://github.com/graphql-rust/juniper" }
log = "0.4.0"
serde = "1.0.118"
serde_json = "1.0.61"
signedsource = { path = "../signedsource" }

[dev-dependencies]
insta = "1.4.0"
