package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "server_bin",
    srcs = [] + glob(["**/*.rs"]),
    deps = [
        "//src/ya-comiste-rust/server/cargo:arangors",
        "//src/ya-comiste-rust/server/cargo:bytes",
        "//src/ya-comiste-rust/server/cargo:data_encoding",
        "//src/ya-comiste-rust/server/cargo:dataloader",
        "//src/ya-comiste-rust/server/cargo:deadpool",
        "//src/ya-comiste-rust/server/cargo:futures",
        "//src/ya-comiste-rust/server/cargo:image",
        "//src/ya-comiste-rust/server/cargo:jsonwebtoken",
        "//src/ya-comiste-rust/server/cargo:juniper",
        "//src/ya-comiste-rust/server/cargo:lazy_static",
        "//src/ya-comiste-rust/server/cargo:num_cpus",
        "//src/ya-comiste-rust/server/cargo:rand",
        "//src/ya-comiste-rust/server/cargo:reqwest",
        "//src/ya-comiste-rust/server/cargo:ring",
        "//src/ya-comiste-rust/server/cargo:serde",
        "//src/ya-comiste-rust/server/cargo:serde_json",
        "//src/ya-comiste-rust/server/cargo:tokio",
        "//src/ya-comiste-rust/server/cargo:tracing",
        "//src/ya-comiste-rust/server/cargo:tracing_subscriber",
        "//src/ya-comiste-rust/server/cargo:uuid",
        "//src/ya-comiste-rust/server/cargo:warp",
        "@raze__blurhash_wasm__0_2_0//:blurhash_wasm",
    ],
    proc_macro_deps = [
        "//src/ya-comiste-rust/server/cargo:async_trait",
    ],
)

# rust_test(
#     name = "server_bin_test",
#     crate = ":server_bin",
#     deps = [
#         "//src/ya-comiste-rust/server/cargo:tokio",
#         "//src/ya-comiste-rust/signedsource:signedsource",
#         "@raze__insta__1_5_2//:insta",
#         "@raze__proptest__0_10_1//:proptest",
#     ],
#     data = glob(["**/*.snap"]),
# )
