[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.4.5"
async-trait = "0.1.42"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm", branch = "master" }
data-encoding = "2.3.1"
dataloader = "0.14.0"
deadpool = { version = "0.7.0", features = ["managed"] }
env_logger = "0.8.2"
futures = "0.3.12"
image = "0.23.12"
jsonwebtoken = "7.2.0"
juniper = "0.15.2"
lazy_static = "1.4.0"
log = "0.4.13"
num_cpus = "1.13.0"
rand = "0.8.2"
reqwest = { version = "0.10.10", features = ["json", "blocking"] }
ring = "0.16.5"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
serde = "1.0.119"
serde_json = "1.0.61"
signedsource = { path = "../signedsource" }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2.5"

[dev-dependencies]
proptest = "0.10.1"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
insta = "1.5.2"
