[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = { git = "https://github.com/mrtnzlml/arangors", branch = "master-fork" }
async-trait = "0.1.42"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm", branch = "master" }
bytes = "1.0.1"
clap = "3.0.0-beta.2"
data-encoding = "2.3.2"
dataloader = "0.14.0"
deadpool = { version = "0.7.0", features = ["managed"] }
futures = "0.3.12"
image = "0.23.12"
jsonwebtoken = "7.2.0"
juniper = "0.15.3"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rand = "0.8.3"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
ring = "0.16.20"
serde = "1.0.123"
serde_json = "1.0.61"
tokio = { version = "1.1.1", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.0"

[dev-dependencies]
insta = "1.5.3"
proptest = "0.10.1"
signedsource = { path = "../signedsource" }
tokio = { version = "1.1.1", features = ["full"] }
