[package]
name = "graphql"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangodb = { path = "../arangodb" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
