[package]
name = "server"
version = "0.0.0"
authors = ["Martin Zlámal <mrtnzlml@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangodb = { path = "../arangodb" }
arangors = "0.4.5"
env_logger = "0.8.2"
graphql = { path = "../graphql" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }
log = "0.4.0"
sdui = { path = "../sdui" }
serde = "1.0.118"
serde_json = "1.0.60"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2.5"

[dev-dependencies]
insta = "1.3.0"
